# Openmp_Weather

./: .gitignore  CMakeLists.txt  README.md  fetch.cpp  fetch.h  main.cpp
